syntax = "proto2";

package qip_web;

message ManagerInfo {
    optional string manager_id = 1;
}

message WorkerInfo {
    optional string worker_id = 1;
}

message LoggerHostInfo {
    oneof host_info {
        ManagerInfo manager = 1;
        WorkerInfo worker = 2;
    }
}


message ManagerLog {
    optional string manager_id = 1;
    oneof logtype {
        string string_log = 2;
        string string_error = 3;
        string set_job = 4;
        string clear_job = 5;
    }
}

message WorkerLog {
    optional string worker_id = 1;
    oneof logtype {
        string string_log = 2;
        string string_error = 3;
        string set_job = 4;
        string clear_job = 5;
    }
}